--- a/readme
+++ b/readme
@@ -2,3 +2,4 @@
 数据库 mongodb 目前尚未搭载，但已嵌入nbmongo模块
 加入了spring框架，我也不太熟悉，边学边用吧。
 前端一概没管，不是不想管，是不知道从何入手。。。。。
+proposal的修改地址为：https://www.overleaf.com/4298066tyxznx#/12746732/
